# monorepo

./: .gitlab-ci.yml  dependencies.yaml  go.work  mkdocs.yml
docs/: building-go.md  building-python.md
docs/go-analytics/: image-classification.md  nsfw-detection.md  object-detection.md  optical-character-recognition.md
docs/python-analytics/: named-entity-recognition.md  sentiment-analysis.md  text-classification.md  topic-modeling.md
docs/stylesheets/: landing.css
go/apps/processor/: go.mod  main.go
go/lambdas/notifier/: go.mod  main.go
go/libs/common-utils/: go.mod  lib.go
overrides/: home.html
python/: pyproject.toml
python/apps/fanout/: pyproject.toml
python/apps/fanout/src/fanout/: __init__.py
python/lambdas/loader/: pyproject.toml
python/lambdas/loader/src/loader/: __init__.py
python/libs/data_core/: pyproject.toml
python/libs/data_core/src/data_core/: __init__.py
tools/ci/: generate_pipeline.py
