[project]
name = "summit-test-python-workspace"
version = "0.1.0"
description = "Monorepo workspace for Python components"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
# Replaced dev-dependencies with dependency-groups (if supported) or just ignore warning for now.
# Actually, let's keep it simple for now and just fix the blocker.

[tool.uv.sources]
data-core = { workspace = true }
fanout = { workspace = true }
loader = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "apps/*", "lambdas/*"]
